# mpv_stt_plugin_crates

./: .gitignore  Cargo.toml  README.md
crates/mpv-stt-common/: Cargo.toml
crates/mpv-stt-common/src/: lib.rs
crates/mpv-stt-crypto/: Cargo.toml
crates/mpv-stt-crypto/src/: lib.rs
crates/mpv-stt-plugin/: AGENTS.md  Cargo.toml  build.rs
crates/mpv-stt-plugin/src/: audio.rs  config.rs  fast_whisper.rs  ffi.rs  lib.rs  plugin.rs  process.rs  subtitle_manager.rs  translate.rs
crates/mpv-stt-plugin/src/stt/: local_whisper.rs  mod.rs  remote_http.rs
crates/mpv-stt-protocol/: Cargo.toml
crates/mpv-stt-protocol/src/: lib.rs
crates/mpv-stt-server/: AGENTS.md  Cargo.toml  run.sh
crates/mpv-stt-server/src/: main.rs  server.rs  worker.rs
crates/mpv-stt-srt/: Cargo.toml
crates/mpv-stt-srt/src/: lib.rs
scripts/: README.md  build-all.sh
scripts/android-mpv/: buildall.sh
scripts/android-mpv/include/: depinfo.sh  download-deps.sh  path.sh
scripts/android-mpv/scripts/: ffmpeg.sh  freetype2.sh  fribidi.sh  harfbuzz.sh  libass.sh  libplacebo.sh  mpv.sh  unibreak.sh
