[workspace]
resolver = "2"
members = [
    "crates/mpv-stt-common",
    "crates/mpv-stt-crypto",
    "crates/mpv-stt-protocol",
    "crates/mpv-stt-srt",
    "crates/mpv-stt-plugin",
    "crates/mpv-stt-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["canxin121"]

[workspace.dependencies]
# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }

# Crypto
aes-gcm = "0.10.3"
sha2 = "0.10.9"
rand = "0.9.2"

# Logging
log = "0.4.29"
env_logger = "0.11.8"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3.31"

# Audio processing
hound = "3.5.1"
tempfile = "3.24.0"

# SRT library
srtlib = "0.2.0"

# Internal workspace crates
mpv-stt-common = { path = "crates/mpv-stt-common" }
mpv-stt-crypto = { path = "crates/mpv-stt-crypto" }
mpv-stt-protocol = { path = "crates/mpv-stt-protocol" }
mpv-stt-srt = { path = "crates/mpv-stt-srt" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
